--- a/views/auth-views/signup-view.ejs
+++ b/views/auth-views/signup-view.ejs
@@ -1,24 +1,68 @@
-<h2>Sign Up</h2>
+<div class="form">
 
+  <ul class="tab-group">
+          <li class="tab active"><a href="#signup">Sign Up</a></li>
+          <li class="tab"><a href="#login">Log In</a></li>
+        </ul>
 
-<% if(typeof messageForDumbUsers === 'string'){ %>
-  <p class="error-message"><%= messageForDumbUsers %> </p>
-<% } %>
+      <div class="tab-content">
+        <div id="signup">
+          <h1>Sign Up for Free</h1>
 
-<form id= "form" action="/signup" method="post">
+          <% if(typeof messageForDumbUsers === 'string'){ %>
+            <p class="error-message"><%= messageForDumbUsers %> </p>
+          <% } %>
 
-  <label for="full-name-input">Your Name</label>
-  <input id="full-name-input" type="text" name="signupFullName" placeholder="">
-  <br>
+          <form action="/signup" method="post">
 
-  <label for="email-input"> Email </label>
-  <input id="email-input "type="text" name="signupEmail" placeholder="">
-  <br>
+          <div class="top-row">
+            <div class="field-wrap">
+              <label for="first-name-input">First Name <span class "req">*</span></label>
+              <input id="first-name-input" type="text" name="signupFirstName">
+            </div>
 
-  <label for="password-input">Password</label>
-  <input id="password-input" type="password" name="signupPassword" placeholder="***********">
-  <br>
+            <div class="field-wrap">
+              <label for="last-name-input">Last Name <span class "req">*</span></label>
+              <input id="last-name-input" type="text" name="signupLastName">
+            </div>
+          </div>
 
-  <button type="submit" name="button">Sign Up</button>
+          <div class="field-wrap">
+            <label for="email-input"> Email <span class="req">*</span></label>
+            <input id="email-input" type="email" name="signupEmail">
+          </div>
 
-</form>
+          <div class="field-wrap">
+            <label for="password-input">Password<span class="req">*</span></label>
+            <input id="password-input" type="password" name="signupPassword">
+          </div>
+
+          <button type="submit" class="button button-block"/>Get Started</button>
+
+          </form>
+
+        </div>
+
+        <div id="login">
+          <h1>Welcome Back!</h1>
+
+          <form action="/login" method="post">
+
+            <div class="field-wrap">
+              <label for="email-input">Email<span class="req">*</span></label>
+              <input id="email-input" type="text" name="email">
+          </div>
+
+          <div class="field-wrap">
+            <label for="password-input">Password<span class="req">*</span></label>
+            <input id="password-input" type="password" name="password">
+          </div>
+
+          <button class="button button-block"/>Log In</button>
+
+          </form>
+
+        </div>
+      </div><!-- tab-content -->
+
+</div> <!-- /form -->
