--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,14 +4,20 @@
     <meta charset="utf-8">
     <title><%= title %></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/main.min.css">
   </head>
   <body>
     <header>
       <nav>
-        <a href="/">Home</a>
-        <a href="/signup">Sign Up</a>
-        <a href="/login">Log In</a>
+        <div class="topnav" id="myTopnav">
+          <a class= "navbar" href="/">Home</a>
+          <% if (typeof currentUser === "object"){ %>
+            <a class= "navbar" href="/notes/new">Create a Note</a>
+            <a class= "navbar" href="/logout">Log Out</a>
+            <% } else { %>
+              <a class= "navbar" href="/signup">Register</a>
+              <% } %>
+        </div>
       </nav>
     </header>
 
@@ -19,5 +25,7 @@
     <footer>
 
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src = "/javascripts/front.js"></script>
   </body>
 </html>
