added text editor finished displaying notes in profile

--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -224,15 +224,6 @@ textarea {
   margin-top:-20px;
   text-align:right;
 }
-
-#note-content-input {
- background: url(http://i.stack.imgur.com/ynxjD.png) repeat-y;
- width: 900px;
- height: 300px;
- font: normal 14px verdana;
- line-height: 25px;
- padding: 2px 10px;
- border: solid 1px #ddd;
- color: black;
- margin: 0 auto;
+#note-title-input{
+  color: black;
 }
