--- a/views/note-views/add-a-note.ejs
+++ b/views/note-views/add-a-note.ejs
@@ -1,11 +1,11 @@
 <h2>Create a Note </h2>
 
-<form action="/notes" method="post">
+<form action="/notes/new" method="post">
 
   <div class="">
     <div class="field-wrap">
-      <label for="note-title-input">Title</label>
-      <input id="note-title-input" type="text" name="noteTitle">
+      <label for="note-title-input"></label>
+      <input id="note-title-input" type="text" name="noteTitle" placeholder="Title">
     </div>
 
     <div class="field-wrap">
