--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,6 +25,21 @@
     <footer>
 
     </footer>
+    <script src="https://cloud.tinymce.com/stable/tinymce.min.js?apiKey=fqnsgd8qygvc8zidega2ww6ydspnhgdayk1ln4bnjz7vwom0"></script>
+    <script>tinymce.init({
+  selector: 'textarea',
+  height: 500,
+  menubar: false,
+  plugins: [
+    'advlist autolink lists link image charmap print preview anchor',
+    'searchreplace visualblocks code fullscreen',
+    'insertdatetime media table contextmenu paste code'
+  ],
+  toolbar: 'undo redo | insert | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
+  content_css: [
+    '//fonts.googleapis.com/css?family=Lato:300,300i,400,400i',
+    '//www.tinymce.com/css/codepen.min.css']
+});</script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src = "/javascripts/front.js"></script>
   </body>
