Finished the editing of a note

--- a/views/note-views/note-list-view.ejs
+++ b/views/note-views/note-list-view.ejs
@@ -5,6 +5,8 @@
     <li>
         <h3><%= oneNote.title %></h3>
         <p> <%= oneNote.content %></p>
+        <a href="/<%= oneNote._id %>/edit">Edit</a>
+        <a href="/notes/<%= oneNote._id %>/delete">Delete</a>
     </li>
   <% }) %>
 </ul>
