--- a/views/note-views/add-a-note.ejs
+++ b/views/note-views/add-a-note.ejs
@@ -1,8 +1,8 @@
 <h2>Create a Note </h2>
 
-<form action="/notes/new" method="post">
+<div class="container">
+  <form action="/notes/new" method="post">
 
-  <div class="">
     <div class="field-wrap">
       <label for="note-title-input"></label>
       <input id="note-title-input" type="text" name="noteTitle" placeholder="Title">
@@ -13,6 +13,6 @@
       <textarea id="note-content-input" name="noteContent"></textarea>
     </div>
 
-    <button type="submit" name="button">Save this Note</button>
-  </div>
-</form>
+    <button class="button button-block" type="submit" name="button button-block">Save this Note</button>
+  </form>
+</div>
