--- a/views/note-views/edit-a-note.ejs
+++ b/views/note-views/edit-a-note.ejs
@@ -1,8 +1,8 @@
 <h2> Edit this Note </h2>
 
+<div class="container">
 <form action="/note/edit/<%=noteId%>" method="post">
 
-    <div class="">
       <div class="field-wrap">
         <label for="note-title-input"></label>
         <input id="note-title-input" type="text" name="noteTitle" value="<%= note.title %>">
@@ -12,7 +12,7 @@
         <label for="note-content-input"></label>
         <textarea id="note-content-input" name="noteContent"><%= note.content %></textarea>
       </div>
-      <button type="submit" name="button">Save this Note</button>
-    </div>
+      <button class="button button-block" type="submit" name="button">Save this Note</button>
 
 </form>
+</div>
