--- a/views/note-views/note-list-view.ejs
+++ b/views/note-views/note-list-view.ejs
@@ -1,12 +1,17 @@
 <h2>My Notes</h2>
+<div class="container">
 
 <ul>
   <% notesAndStuff.forEach((oneNote) => { %>
-    <li>
+    <div class="single_note">
+      <li>
         <h3><%= oneNote.title %></h3>
         <p> <%= oneNote.content %></p>
         <a href="/<%= oneNote._id %>/edit">Edit</a>
         <a href="/notes/<%= oneNote._id %>/delete">Delete</a>
-    </li>
+      </li>
+
+    </div>
   <% }) %>
 </ul>
+</div>
