--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,7 @@
 <div class="landing_page">
-  <h1><%= title %></h1>
-  <p>Welcome to <%= title %></p>
+  <div class="landing_page_content">
+    <h1>The simplest way to keep notes.</h1>
+    <p>Light, clean, and free. Totes Notes is now available for the web.</p>
+    <button class="try_now" id= "myButton" name="button">TRY NOW</button>
+  </div>
 </div>
