--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,7 @@
     <header>
       <nav>
         <div class="topnav" id="myTopnav">
+          <img src="/images/totes.png" alt="Totes Notes logo">
           <a class= "navbar" href="/">Home</a>
           <% if (typeof currentUser === "object"){ %>
             <a class= "navbar" href="/my-notes">My Notes</a>
