updated home page styles

--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -54,6 +54,7 @@ a {
       color: $white;
       font-size: 19px;
       font-weight: $thin;
+      margin-bottom: 20px;
     }
   }
 }
@@ -165,7 +166,7 @@ a {
 h1 {
   color: $white;
   font-weight:bold;
-  margin:0 0 40px;
+  margin:0 0 20px;
   font-size: 44px;
 }
 
