--- a/views/note-views/edit-a-note.ejs
+++ b/views/note-views/edit-a-note.ejs
@@ -1,4 +1,4 @@
-<h2> Edit this Note </h2>
+<h2 id="header_top" > Edit this Note </h2>
 
 <div class="container">
 <form action="/note/edit/<%=noteId%>" method="post">
