--- a/public/stylesheets/main.scss
+++ b/public/stylesheets/main.scss
@@ -44,12 +44,11 @@ a {
   background-size: cover;
   height: 700px;
   width: auto;
-  display: flex;
-  align-items: center;
   .landing_page_content{
     height: 200px;
     width: 370px;
     margin-left: 40px;
+    padding-top: 194px;
     p {
       color: $white;
       font-size: 19px;
@@ -68,7 +67,7 @@ a {
   display:block;
   width:100%;
   padding:5px 10px;
-  border:1px solid $gray-light;
+  border:3px solid $gray-light;
   border-radius:0;
   transition:border-color .25s ease, box-shadow .25s ease;
   &:hover, &:focus {
@@ -280,6 +279,8 @@ textarea {
   color: $white;
   ul{
     list-style: none;
+    padding: 0px;
+    text-align: center;
   }
 }
 .single_note{
@@ -287,7 +288,24 @@ textarea {
   margin: 20px;
   width: 25%;
   height: 25%;
+  background-color: $body-bg;
+  text-align: center;
+  padding: 10px;
+  color:#333;
   a{
     margin: 10px;
   }
+}
+#header_top{
+  font-size: 45px;
+  margin-bottom: 38px;
+}
+.pain{
+  background-color: $main-light;
+  border-color: $main-light;
+  &:hover, &:focus {
+    background:$main-dark;
+    border-color: $main-dark;
+  }
+
 }
