--- a/views/note-views/add-a-note.ejs
+++ b/views/note-views/add-a-note.ejs
@@ -1,4 +1,4 @@
-<h2>Create a Note </h2>
+<h2 id="header_top">Create a Note </h2>
 
 <div class="container">
   <form action="/notes/new" method="post">
